new projects has been added

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/AshrayResumePre.pdf')"
+            onclick="window.open('./assets/frontend-developer-resume.pdf')"
           >
             Download Resume
           </button>
@@ -94,7 +94,7 @@
                 class="icon"
               />
               <h3>Education</h3>
-              <p>BCA (Bachelors in Computer application)<br />MCA (Masters in Computer Application)</p>
+              <p>MCA (Masters in Computer application) - 10/23 <br />BCA (Bachelors in Computer application) - 08/21</p>
             </div>
           </div>
           <div class="text-container">
@@ -153,8 +153,8 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Python</h3>
-                  <p>Intermediate</p>
+                  <h3>ReactJs</h3>
+                  <p>Experienced</p>
                 </div>
               </article>
               <article>
@@ -176,7 +176,7 @@
                 />
                 <div>
                   <h3>SQL</h3>
-                  <p>Basic</p>
+                  <p>Intermediate</p>
                 </div>
               </article>
               <article>
@@ -186,7 +186,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>c++/c# </h3>
+                  <h3>MongoDB </h3>
                   <p>Intermediate</p>
                 </div>
               </article>
@@ -202,18 +202,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>PostgreSQL</h3>
-                  <p>Basic</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Node JS</h3>
+                  <h3>TailwindCSS</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
@@ -224,7 +213,18 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Express JS</h3>
+                  <h3>Material UI</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>UI/UX</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
@@ -236,7 +236,7 @@
                 />
                 <div>
                   <h3>Bootstrap</h3>
-                  <p>Intermediate</p>
+                  <p>Basic</p>
                 </div>
               </article>
             </div>
@@ -263,20 +263,20 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Crime-Investigator</h2>
+            <h2 class="experience-sub-title project-title">Real-Estate Frontend Template</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/ashrayachu/crime-investigator.git'"
+                onclick="location.href='https://github.com/ashrayachu/real-estate'"
               >
                 Github
               </button>
-              <!-- <button
+              <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://real-estate-bice-ten.vercel.app/'"
               >
                 Live Demo
-              </button> -->
+              </button>
             </div>
           </div>
           <div class="details-container color-container">
@@ -287,17 +287,17 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Cosmos</h2>
+            <h2 class="experience-sub-title project-title">Jazzup-Fashion Frontend Template</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/ashrayachu/cosmos.git'"
+                onclick="location.href='https://github.com/ashrayachu/jazzup-fashion'"
               >
                 Github
               </button>
               <button
               class="btn btn-color-2 project-btn"
-              onclick="location.href='https://-taiga-97235.herokuapp.com/'"
+              onclick="location.href='https://jazzup-fashion.vercel.app/'"
             >
               Live Demo
             </button>
@@ -312,14 +312,20 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">WIFI-camera</h2>
+            <h2 class="experience-sub-title project-title">AI-Summarizer</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/ashrayachu/ai-summarizer'"
               >
                 Github
               </button>
+              <button
+              class="btn btn-color-2 project-btn"
+              onclick="location.href='https://ai-summarizerweb.netlify.app/'"
+            >
+              Live Demo
+            </button>
              
             </div>
           </div>
@@ -377,7 +383,7 @@
           </ul>
         </div>
       </nav>
-      <p class="cright">Copyright &#169; 2023 Ashray. All Rights Reserved.</p>
+      <p class="cright">Copyright &#169; 2024 Ashray. All Rights Reserved.</p>
     </footer>
     <script src="https://smtpjs.com/v3/smtp.js"></script>
     <script src="script.js"></script>
